# WCWnWoRevengeRecomp

./: .gitignore  .gitmodules  BUILDING.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  revenge.toml
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES_TEMPLATE.md  release-readme.txt
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: release.yml  validate-external.yml  validate.yml
disasm/: libultra.md  revenge.ld  revenge.yaml  symbol_addrs.txt
icons/: app.rc
rsp/: README.md  revenge_audio.toml
src/main/: main.cpp
syms/: dump.toml  stub_candidates.txt
tools/: classify.py  fingerprint.py  fingerprint2.py  fingerprint3.py  gen_stubs.py  gen_symbols.py  recomp-loop.ps1  recomp-loop2.py  recomp-loop3.py  recon.py  symbolize.py
